# cielo-connect-api

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
cieloconnectapi/: client.py  device.py  model.py
